# Solver

./: CMakeLists.txt  Doxyfile.in  README.md
app/: CMakeLists.txt
app/dwt1D/: CMakeLists.txt  dwt1D.cpp
app/dwt2D/: CMakeLists.txt  dwt2D.cpp
app/dwt2Dcuda/: CMakeLists.txt  dwt2Dcuda.cu
app/dwt3D/: CMakeLists.txt  dwt3D.cpp
src/: CMakeLists.txt
src/Field/: CoeffContainer.cu  CoeffContainer.h
src/Operator/Wavelet/: Wavelet1D.h  Wavelet2D.h  Wavelet3D.h
src/cuda/utils/: Constant.cu  DeviceManager.cu  DeviceManager.cu.h  check_utils.cu.h  utils.cu.h
test/src/: CMakeLists.txt  dwt_1D.cpp  dwt_2D.cpp  dwt_3D.cpp
